ulParser.java
// $ANTLR 3.5.2 ul.g 2021-08-01 13:20:08

        import java.util.HashMap;
		import AST.*;
		import java.util.ArrayList;
		import TYPES.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

@SuppressWarnings("all")
public class ulParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "BOOLEAN", "CHAR", "CHARCONST", 
		"CLOSECURLY", "CLOSEPAREN", "COMMENT", "ELSE", "EQUALITY", "FALSE", "FLOAT", 
		"FLOATCONST", "ID", "IF", "INT", "INTCONST", "LESSTHAN", "MINUS", "OPENCURLY", 
		"OPENPAREN", "PLUS", "PRINT", "PRINTLN", "RETURN", "SEMI", "STAR", "STRCONST", 
		"STRING", "TRUE", "VOID", "WHILE", "WS", "','", "'='", "'['", "']'"
	};
	public static final int EOF=-1;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int BOOLEAN=4;
	public static final int CHAR=5;
	public static final int CHARCONST=6;
	public static final int CLOSECURLY=7;
	public static final int CLOSEPAREN=8;
	public static final int COMMENT=9;
	public static final int ELSE=10;
	public static final int EQUALITY=11;
	public static final int FALSE=12;
	public static final int FLOAT=13;
	public static final int FLOATCONST=14;
	public static final int ID=15;
	public static final int IF=16;
	public static final int INT=17;
	public static final int INTCONST=18;
	public static final int LESSTHAN=19;
	public static final int MINUS=20;
	public static final int OPENCURLY=21;
	public static final int OPENPAREN=22;
	public static final int PLUS=23;
	public static final int PRINT=24;
	public static final int PRINTLN=25;
	public static final int RETURN=26;
	public static final int SEMI=27;
	public static final int STAR=28;
	public static final int STRCONST=29;
	public static final int STRING=30;
	public static final int TRUE=31;
	public static final int VOID=32;
	public static final int WHILE=33;
	public static final int WS=34;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public ulParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public ulParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return ulParser.tokenNames; }
	@Override public String getGrammarFileName() { return "ul.g"; }


	        HashMap memory = new HashMap();




	// $ANTLR start "program"
	// ul.g:17:1: program returns [Program p] : (f= function )+ EOF ;
	public final Program program() throws RecognitionException {
		Program p = null;


		Function f =null;


			ArrayList<Function> functions = new ArrayList<Function>();

		try {
			// ul.g:22:2: ( (f= function )+ EOF )
			// ul.g:23:2: (f= function )+ EOF
			{
			// ul.g:23:2: (f= function )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( ((LA1_0 >= BOOLEAN && LA1_0 <= CHAR)||LA1_0==FLOAT||LA1_0==INT||LA1_0==STRING||LA1_0==VOID) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// ul.g:23:3: f= function
					{
					pushFollow(FOLLOW_function_in_program46);
					f=function();
					state._fsp--;
					if (state.failed) return p;
					if ( state.backtracking==0 ) {functions.add(f);}
					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					if (state.backtracking>0) {state.failed=true; return p;}
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			match(input,EOF,FOLLOW_EOF_in_program51); if (state.failed) return p;
			if ( state.backtracking==0 ) { 
					p = new Program(functions, "pname");
				}
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return p;
	}
	// $ANTLR end "program"



	// $ANTLR start "function"
	// ul.g:29:1: function returns [Function f] : d= functionDecl b= functionBody ;
	public final Function function() throws RecognitionException {
		Function f = null;


		FunctionDecl d =null;
		FunctionBody b =null;

		try {
			// ul.g:30:2: (d= functionDecl b= functionBody )
			// ul.g:31:2: d= functionDecl b= functionBody
			{
			pushFollow(FOLLOW_functionDecl_in_function74);
			d=functionDecl();
			state._fsp--;
			if (state.failed) return f;
			pushFollow(FOLLOW_functionBody_in_function80);
			b=functionBody();
			state._fsp--;
			if (state.failed) return f;
			if ( state.backtracking==0 ) {
					f = new Function(d, b, "fname", d.line, d.offset);
				}
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return f;
	}
	// $ANTLR end "function"



	// $ANTLR start "functionDecl"
	// ul.g:37:1: functionDecl returns [FunctionDecl d] : cType= compoundType iden= id '(' p= formalParameters ')' ;
	public final FunctionDecl functionDecl() throws RecognitionException {
		FunctionDecl d = null;


		TypeNode cType =null;
		Id iden =null;
		FormalParameterList p =null;

		try {
			// ul.g:38:2: (cType= compoundType iden= id '(' p= formalParameters ')' )
			// ul.g:39:2: cType= compoundType iden= id '(' p= formalParameters ')'
			{
			pushFollow(FOLLOW_compoundType_in_functionDecl102);
			cType=compoundType();
			state._fsp--;
			if (state.failed) return d;
			pushFollow(FOLLOW_id_in_functionDecl108);
			iden=id();
			state._fsp--;
			if (state.failed) return d;
			match(input,OPENPAREN,FOLLOW_OPENPAREN_in_functionDecl110); if (state.failed) return d;
			pushFollow(FOLLOW_formalParameters_in_functionDecl116);
			p=formalParameters();
			state._fsp--;
			if (state.failed) return d;
			match(input,CLOSEPAREN,FOLLOW_CLOSEPAREN_in_functionDecl118); if (state.failed) return d;
			if ( state.backtracking==0 ) {
					d = new FunctionDecl(cType, iden, p, "function decl", cType.line, cType.offset);
				}
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return d;
	}
	// $ANTLR end "functionDecl"



	// $ANTLR start "formalParameters"
	// ul.g:45:1: formalParameters returns [FormalParameterList p] : ( (t= compoundType iden= id ) (d= moreFormals )* |);
	public final FormalParameterList formalParameters() throws RecognitionException {
		FormalParameterList p = null;


		TypeNode t =null;
		Id iden =null;
		Declaration d =null;


			ArrayList<FormalParameter> params = new ArrayList<FormalParameter>();

		try {
			// ul.g:52:2: ( (t= compoundType iden= id ) (d= moreFormals )* |)
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( ((LA3_0 >= BOOLEAN && LA3_0 <= CHAR)||LA3_0==FLOAT||LA3_0==INT||LA3_0==STRING||LA3_0==VOID) ) {
				alt3=1;
			}
			else if ( (LA3_0==CLOSEPAREN) ) {
				alt3=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return p;}
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// ul.g:53:2: (t= compoundType iden= id ) (d= moreFormals )*
					{
					// ul.g:53:2: (t= compoundType iden= id )
					// ul.g:53:3: t= compoundType iden= id
					{
					pushFollow(FOLLOW_compoundType_in_formalParameters149);
					t=compoundType();
					state._fsp--;
					if (state.failed) return p;
					pushFollow(FOLLOW_id_in_formalParameters155);
					iden=id();
					state._fsp--;
					if (state.failed) return p;
					if ( state.backtracking==0 ) {
							params.add(new FormalParameter(new Declaration(t, iden, t.line, t.offset), t.line, t.offset));
							}
					}

					// ul.g:56:2: (d= moreFormals )*
					loop2:
					while (true) {
						int alt2=2;
						int LA2_0 = input.LA(1);
						if ( (LA2_0==35) ) {
							alt2=1;
						}

						switch (alt2) {
						case 1 :
							// ul.g:56:3: d= moreFormals
							{
							pushFollow(FOLLOW_moreFormals_in_formalParameters166);
							d=moreFormals();
							state._fsp--;
							if (state.failed) return p;
							if ( state.backtracking==0 ) {
									params.add(new FormalParameter(d, d.line, d.offset));
									}
							}
							break;

						default :
							break loop2;
						}
					}

					}
					break;
				case 2 :
					// ul.g:60:2: 
					{
					}
					break;

			}
			if ( state.backtracking==0 ) {
					p = new FormalParameterList(params);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return p;
	}
	// $ANTLR end "formalParameters"



	// $ANTLR start "moreFormals"
	// ul.g:62:1: moreFormals returns [Declaration d] : ',' t= compoundType iden= id ;
	public final Declaration moreFormals() throws RecognitionException {
		Declaration d = null;


		TypeNode t =null;
		Id iden =null;

		try {
			// ul.g:62:36: ( ',' t= compoundType iden= id )
			// ul.g:63:2: ',' t= compoundType iden= id
			{
			match(input,35,FOLLOW_35_in_moreFormals186); if (state.failed) return d;
			pushFollow(FOLLOW_compoundType_in_moreFormals192);
			t=compoundType();
			state._fsp--;
			if (state.failed) return d;
			pushFollow(FOLLOW_id_in_moreFormals198);
			iden=id();
			state._fsp--;
			if (state.failed) return d;
			if ( state.backtracking==0 ) {d = new Declaration(t, iden, t.line, t.offset);}
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return d;
	}
	// $ANTLR end "moreFormals"



	// $ANTLR start "functionBody"
	// ul.g:66:1: functionBody returns [FunctionBody b] : '{' (v= varDecl )* (d= statement )* '}' ;
	public final FunctionBody functionBody() throws RecognitionException {
		FunctionBody b = null;


		VarDecl v =null;
		Statement d =null;


			ArrayList<VarDecl> declarations = new ArrayList<VarDecl>();
			ArrayList<Statement> statements = new ArrayList<Statement>();

		try {
			// ul.g:74:2: ( '{' (v= varDecl )* (d= statement )* '}' )
			// ul.g:75:2: '{' (v= varDecl )* (d= statement )* '}'
			{
			match(input,OPENCURLY,FOLLOW_OPENCURLY_in_functionBody222); if (state.failed) return b;
			// ul.g:75:6: (v= varDecl )*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( ((LA4_0 >= BOOLEAN && LA4_0 <= CHAR)||LA4_0==FLOAT||LA4_0==INT||LA4_0==STRING||LA4_0==VOID) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// ul.g:75:7: v= varDecl
					{
					pushFollow(FOLLOW_varDecl_in_functionBody229);
					v=varDecl();
					state._fsp--;
					if (state.failed) return b;
					if ( state.backtracking==0 ) {declarations.add(v);}
					}
					break;

				default :
					break loop4;
				}
			}

			// ul.g:75:43: (d= statement )*
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==CHARCONST||LA5_0==FALSE||(LA5_0 >= FLOATCONST && LA5_0 <= IF)||LA5_0==INTCONST||LA5_0==OPENPAREN||(LA5_0 >= PRINT && LA5_0 <= SEMI)||LA5_0==STRCONST||LA5_0==TRUE||LA5_0==WHILE) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// ul.g:75:44: d= statement
					{
					pushFollow(FOLLOW_statement_in_functionBody239);
					d=statement();
					state._fsp--;
					if (state.failed) return b;
					if ( state.backtracking==0 ) {statements.add(d);}
					}
					break;

				default :
					break loop5;
				}
			}

			match(input,CLOSECURLY,FOLLOW_CLOSECURLY_in_functionBody244); if (state.failed) return b;
			}

			if ( state.backtracking==0 ) {
					b = new FunctionBody(new VarDeclList(declarations), new StatementList(statements));
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return b;
	}
	// $ANTLR end "functionBody"



	// $ANTLR start "varDecl"
	// ul.g:78:1: varDecl returns [VarDecl v] : t= compoundType i= id SEMI ;
	public final VarDecl varDecl() throws RecognitionException {
		VarDecl v = null;


		TypeNode t =null;
		Id i =null;

		try {
			// ul.g:78:27: (t= compoundType i= id SEMI )
			// ul.g:79:2: t= compoundType i= id SEMI
			{
			pushFollow(FOLLOW_compoundType_in_varDecl261);
			t=compoundType();
			state._fsp--;
			if (state.failed) return v;
			pushFollow(FOLLOW_id_in_varDecl267);
			i=id();
			state._fsp--;
			if (state.failed) return v;
			match(input,SEMI,FOLLOW_SEMI_in_varDecl269); if (state.failed) return v;
			if ( state.backtracking==0 ) {v = new VarDecl(t, i, i.line, i.offset);}
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return v;
	}
	// $ANTLR end "varDecl"



	// $ANTLR start "compoundType"
	// ul.g:82:1: compoundType returns [TypeNode tnode] : (t= type |t= type '[' s= integerConstant ']' );
	public final TypeNode compoundType() throws RecognitionException {
		TypeNode tnode = null;


		TypeNode t =null;
		IntLiteral s =null;

		try {
			// ul.g:82:38: (t= type |t= type '[' s= integerConstant ']' )
			int alt6=2;
			switch ( input.LA(1) ) {
			case FLOAT:
				{
				int LA6_1 = input.LA(2);
				if ( (LA6_1==ID) ) {
					alt6=1;
				}
				else if ( (LA6_1==37) ) {
					alt6=2;
				}

				else {
					if (state.backtracking>0) {state.failed=true; return tnode;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 6, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case INT:
				{
				int LA6_2 = input.LA(2);
				if ( (LA6_2==ID) ) {
					alt6=1;
				}
				else if ( (LA6_2==37) ) {
					alt6=2;
				}

				else {
					if (state.backtracking>0) {state.failed=true; return tnode;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 6, 2, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case CHAR:
				{
				int LA6_3 = input.LA(2);
				if ( (LA6_3==ID) ) {
					alt6=1;
				}
				else if ( (LA6_3==37) ) {
					alt6=2;
				}

				else {
					if (state.backtracking>0) {state.failed=true; return tnode;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 6, 3, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case STRING:
				{
				int LA6_4 = input.LA(2);
				if ( (LA6_4==ID) ) {
					alt6=1;
				}
				else if ( (LA6_4==37) ) {
					alt6=2;
				}

				else {
					if (state.backtracking>0) {state.failed=true; return tnode;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 6, 4, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case BOOLEAN:
				{
				int LA6_5 = input.LA(2);
				if ( (LA6_5==ID) ) {
					alt6=1;
				}
				else if ( (LA6_5==37) ) {
					alt6=2;
				}

				else {
					if (state.backtracking>0) {state.failed=true; return tnode;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 6, 5, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case VOID:
				{
				int LA6_6 = input.LA(2);
				if ( (LA6_6==ID) ) {
					alt6=1;
				}
				else if ( (LA6_6==37) ) {
					alt6=2;
				}

				else {
					if (state.backtracking>0) {state.failed=true; return tnode;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 6, 6, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return tnode;}
				NoViableAltException nvae =
					new NoViableAltException("", 6, 0, input);
				throw nvae;
			}
			switch (alt6) {
				case 1 :
					// ul.g:83:2: t= type
					{
					pushFollow(FOLLOW_type_in_compoundType288);
					t=type();
					state._fsp--;
					if (state.failed) return tnode;
					if ( state.backtracking==0 ) {
							tnode = t;
							//tnode.type = "test";
							//System.out.println(tnode.type);
						}
					}
					break;
				case 2 :
					// ul.g:89:4: t= type '[' s= integerConstant ']'
					{
					pushFollow(FOLLOW_type_in_compoundType300);
					t=type();
					state._fsp--;
					if (state.failed) return tnode;
					match(input,37,FOLLOW_37_in_compoundType302); if (state.failed) return tnode;
					pushFollow(FOLLOW_integerConstant_in_compoundType308);
					s=integerConstant();
					state._fsp--;
					if (state.failed) return tnode;
					match(input,38,FOLLOW_38_in_compoundType310); if (state.failed) return tnode;
					if ( state.backtracking==0 ) {
							tnode = new TypeNode(new ArrayType(t.t, s.val), t.line, t.offset);
							//tnode.type = "test";
						}
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return tnode;
	}
	// $ANTLR end "compoundType"



	// $ANTLR start "type"
	// ul.g:96:1: type returns [TypeNode t] : ( FLOAT | INT | CHAR | STRING | BOOLEAN | VOID );
	public final TypeNode type() throws RecognitionException {
		TypeNode t = null;


		Token FLOAT1=null;
		Token INT2=null;
		Token CHAR3=null;
		Token STRING4=null;
		Token BOOLEAN5=null;
		Token VOID6=null;

		try {
			// ul.g:96:26: ( FLOAT | INT | CHAR | STRING | BOOLEAN | VOID )
			int alt7=6;
			switch ( input.LA(1) ) {
			case FLOAT:
				{
				alt7=1;
				}
				break;
			case INT:
				{
				alt7=2;
				}
				break;
			case CHAR:
				{
				alt7=3;
				}
				break;
			case STRING:
				{
				alt7=4;
				}
				break;
			case BOOLEAN:
				{
				alt7=5;
				}
				break;
			case VOID:
				{
				alt7=6;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return t;}
				NoViableAltException nvae =
					new NoViableAltException("", 7, 0, input);
				throw nvae;
			}
			switch (alt7) {
				case 1 :
					// ul.g:97:2: FLOAT
					{
					FLOAT1=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_type327); if (state.failed) return t;
					if ( state.backtracking==0 ) {t = new TypeNode(new FloatType(), (FLOAT1!=null?FLOAT1.getLine():0), FLOAT1.getCharPositionInLine());}
					}
					break;
				case 2 :
					// ul.g:98:4: INT
					{
					INT2=(Token)match(input,INT,FOLLOW_INT_in_type334); if (state.failed) return t;
					if ( state.backtracking==0 ) {t = new TypeNode(new IntegerType(), (INT2!=null?INT2.getLine():0), INT2.getCharPositionInLine());}
					}
					break;
				case 3 :
					// ul.g:99:4: CHAR
					{
					CHAR3=(Token)match(input,CHAR,FOLLOW_CHAR_in_type341); if (state.failed) return t;
					if ( state.backtracking==0 ) {t = new TypeNode(new CharType(), (CHAR3!=null?CHAR3.getLine():0), CHAR3.getCharPositionInLine());}
					}
					break;
				case 4 :
					// ul.g:100:4: STRING
					{
					STRING4=(Token)match(input,STRING,FOLLOW_STRING_in_type349); if (state.failed) return t;
					if ( state.backtracking==0 ) {t = new TypeNode(new StringType(), (STRING4!=null?STRING4.getLine():0), STRING4.getCharPositionInLine());}
					}
					break;
				case 5 :
					// ul.g:101:4: BOOLEAN
					{
					BOOLEAN5=(Token)match(input,BOOLEAN,FOLLOW_BOOLEAN_in_type356); if (state.failed) return t;
					if ( state.backtracking==0 ) {t = new TypeNode(new BooleanType(), (BOOLEAN5!=null?BOOLEAN5.getLine():0), BOOLEAN5.getCharPositionInLine());}
					}
					break;
				case 6 :
					// ul.g:102:4: VOID
					{
					VOID6=(Token)match(input,VOID,FOLLOW_VOID_in_type363); if (state.failed) return t;
					if ( state.backtracking==0 ) {t = new TypeNode(new VoidType(), (VOID6!=null?VOID6.getLine():0), VOID6.getCharPositionInLine());}
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return t;
	}
	// $ANTLR end "type"



	// $ANTLR start "statement"
	// ul.g:106:1: statement returns [Statement s] : ( SEMI |e= expr SEMI | IF OPENPAREN e= expr CLOSEPAREN b1= block ELSE b2= block | IF OPENPAREN e= expr CLOSEPAREN b= block | WHILE OPENPAREN e= expr CLOSEPAREN b= block | PRINT e= expr SEMI | PRINTLN e= expr SEMI | RETURN (e= expr )? SEMI |i= id '=' e= expr SEMI |ar= arrayRef '=' e2= expr SEMI );
	public final Statement statement() throws RecognitionException {
		Statement s = null;

